--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,1 +1,98 @@
 @import "./../../index.scss";
+@import "./../home/home.scss";
+
+.contact {
+    @include inner();
+
+    h1 {
+        text-align: center;
+        font-size: 2.5rem;
+        margin-bottom: 20px;
+    }
+
+    .contact-details {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+
+        .contact-info,
+        .contact-form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+            max-height: 500px;
+
+            h2 {
+                font-size: 1.5rem;
+                margin-bottom: 15px;
+            }
+
+            p {
+                margin: 5px 0;
+                line-height: 1.6;
+                font-size: 1rem;
+            }
+
+            .form-group {
+                margin-bottom: 15px;
+
+                label {
+                    display: block;
+                    font-weight: bold;
+                    margin-bottom: 5px;
+                }
+
+                input,
+                textarea {
+                    width: 95%;
+                    padding: 10px;
+                    border: 1px solid #ddd;
+                    border-radius: 4px;
+                    font-size: 1rem;
+                }
+
+                textarea {
+                    resize: vertical;
+                }
+            }
+
+            .submit-button {
+                background-color: #007bff;
+                color: #fff;
+                padding: 10px 20px;
+                border: none;
+                border-radius: 4px;
+                font-size: 1rem;
+                cursor: pointer;
+                transition: background-color 0.3s;
+
+                &:hover {
+                    background-color: #0056b3;
+                }
+            }
+            .contact-map {
+                margin-top: 40px;
+
+                h2 {
+                    text-align: center;
+                    font-size: 1.5rem;
+                    margin-bottom: 15px;
+                }
+
+                .map-image {
+                    display: block;
+                    margin: 0 auto;
+                    border-radius: 8px;
+                    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+                    height: 10%;
+                    max-width: 250px;
+                    height: auto;
+                }
+            }
+        }
+    }
+}
