--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -1,1 +1,49 @@
 @import "./../../index.scss";
+@import "./../home/home.scss";
+
+.serviceContent {
+    @include inner();
+    @include flexDir(column, $ai: center);
+    // gap: 2.5%;
+
+    h1 {
+        font-size: 2.8rem;
+        margin-bottom: 30px;
+        margin-top: -20px;
+        color: $mlblue;
+    }
+
+    .services-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 16px;
+
+        .service-item {
+            width: 230px;
+            padding: 15px;
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+            &:hover {
+                transform: translateY(-5px);
+                box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
+            }
+
+            h2 {
+                font-size: 1.3rem;
+                color: $mlblue;
+                margin-bottom: 10px;
+            }
+
+            p {
+                font-size: 0.8rem;
+                color: #555;
+                line-height: 1.6;
+            }
+        }
+    }
+}
