--- a/src/assets/service/InfoText.scss
+++ b/src/assets/service/InfoText.scss
@@ -1,10 +1,10 @@
 @import "./../../index.scss";
 
 .instructions {
-    position: fixed; /* Bleibt unabhängig von der Eltern-Komponente */
-    top: 8vw;
-    left: 50%;
-    transform: translate(-50%, -7%);
+    position: absolute; /* Bleibt unabhängig von der Eltern-Komponente */
+    top: 11vh;
+    left: 45%;
+    transform: translate(-70%, -7%);
     width: 450px;
     padding: 20px;
     background-color: #fff;
