--- a/src/components/loginWindow/loginWindow.scss
+++ b/src/components/loginWindow/loginWindow.scss
@@ -1,3 +1,5 @@
+@import "./../../index.scss";
+
 .login-window {
     position: fixed;
     top: 50%;
@@ -45,12 +47,20 @@
 
         .close-button {
             position: absolute;
-            top: 10px;
-            right: 10px;
-            background: none;
-            border: none;
-            font-size: 1.5rem;
+            width: 30px;
+            height: 30px;
+            top: 5px;
+            right: 20px;
+            background: #007bff;
+            border: 2px solid #007bff;
+            font-size: 1.2rem;
             cursor: pointer;
+            color: $white;
+            @include dFlex();
+            &:hover {
+                background: #0056b3;
+                border: 2px solid #0056b3;
+            }
         }
 
         p {
